# my_research_CSCL_distance

./: .gitignore  README.md  config.yaml  pyproject.toml
amount_output/: coordinates_avg_distance_per_second.xlsx
src/calculate_movement_amount/: amount_move_distance_new.py
src/display_on_the_graph/: distance_graph.py  movement_amount_graph.py
src/realsense_pose/: __init__.py
src/realsense_pose/fix-bag/: main.py
src/realsense_pose/head_distance/: check.py  classes.py  main_3p_green.py  timecheck_20.py
